--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>< Front-end ></p>
         <p >< UI-UX ></p>
     </div> 
-    <button type="submit">CONTSCT US</button>
+    <button type="submit">CONTACT US</button>
     <img src="imge.2jpg.jpg" alt="">
 </body>
 </html>
